# wallet-generator

./: Cargo.toml  README.md
src/: coin_generator.rs  cyber_generator.rs  generator.rs  main.rs  mnemonic.rs  polkadot_generator.rs
