[package]
name = "walletgen"
version = "0.2.0"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "Generator of addresses and mnemonic phrases for blockchains"
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/CipherDogs/wallet-generator"
repository = "https://github.com/CipherDogs/wallet-generator"
keywords = ["address", "blockchain", "cyber"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33.0"
cyber = "0.1.3"
tiny-bip39 = "0.7.3"

[package.metadata.deb]
maintainer = "DEADBLACKCLOVER <deadblackclover@protonmail.com>"
copyright = "2020, DEADBLACKCLOVER <deadblackclover@protonmail.com>"
license-file = ["LICENSE", "0"]
extended-description = "Generator of addresses and mnemonic phrases for blockchains"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/walletgen", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/walletgen/README", "644"],
]
