[package]
name = "walletgen"
version = "1.1.1"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "Generator of addresses and mnemonic phrases for blockchains"
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/CipherDogs/wallet-generator"
repository = "https://github.com/CipherDogs/wallet-generator"
keywords = ["address", "blockchain", "cyber", "bitcoin", "polkadot"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.34.0"
cyber = "1.0"
data-encoding = "2.4"
sp-core = "20.0.0"
wallet-gen = { git = "https://github.com/CipherDogs/wallet-gen" }

[package.metadata.deb]
maintainer = "DEADBLACKCLOVER <deadblackclover@protonmail.com>"
copyright = "2020, DEADBLACKCLOVER <deadblackclover@protonmail.com>"
license-file = ["LICENSE", "0"]
extended-description = "Generator of addresses and mnemonic phrases for blockchains"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/walletgen", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/walletgen/README", "644"],
]
